dev: progress dump
